--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@
   </head>
 
   <body>
-    <!-- Preloader Start -->
-    <div class="loader"><span class="loader-container"></span></div>
-    <!-- Preloader End -->
-
     <!-- Top Bar Start -->
     <div class="top__bar">
       <div class="container">
@@ -105,14 +101,18 @@
 
     <!-- Banner Area Start -->
     <div class="banner__one">
+      <div class="page__banner-shape">
+        <img src="assets/img/shape/page-banner-shape.png" alt="image" />
+      </div>
       <div class="container">
         <div class="row align-items-center">
           <!-- Στήλη κειμένου (7/12) -->
           <div class="col-xl-7 col-lg-7">
             <div class="banner__one-content">
               <h2>
-                Μετατρέπουμε τις ιδέες σας σε λύσεις
-                <span class="hero-gradient">AI & Software</span>
+                Με σύγχρονες λύσεις τεχνολογίας
+                <span class="hero-gradient">εξελίσσουμε</span> την επιχείρησή
+                σας
               </h2>
               <p>
                 Από μεγάλες εταιρίες εώς αναπτυσσόμενες ομάδες – η SoftBiz σας
@@ -156,7 +156,7 @@
           <!-- Στήλη εικόνας (5/12) -->
           <div class="col-xl-5 col-lg-5">
             <div class="banner__one-image">
-              <img src="assets/img/banner/hero_image.png" alt="SoftBiz Hero" />
+              <img src="assets/img/banner/img_banner.png" alt="SoftBiz Hero" />
             </div>
           </div>
         </div>
@@ -182,7 +182,7 @@
               </div>
               <div class="about__one-image-wrapper">
                 <img
-                  src="assets/img/about/about_1.png"
+                  src="assets/img/about/about_1.jpg"
                   alt=""
                   class="image-1"
                 />
@@ -302,7 +302,7 @@
     <div class="services__one section-padding">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-xl-4 col-md-6 mb-4">
+          <div class="col-xl-6 col-md-6 mb-4">
             <div class="single-service">
               <div class="services__one-single-service-icon">
                 <i class="fas fa-briefcase"></i>
@@ -317,22 +317,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 mb-4">
-            <div class="single-service">
-              <div class="services__one-single-service-icon">
-                <i class="fas fa-code-branch"></i>
-              </div>
-              <div class="services__one-single-service-content">
-                <h4>Blockchain / NFTs</h4>
-                <p>
-                  Projects σε blockchain και NFTs, με στόχο νέες μορφές αξίας
-                  και καινοτομίας
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-4 col-md-6 mb-4">
+          <div class="col-xl-6 col-md-6 mb-4">
             <div class="single-service">
               <div class="services__one-single-service-icon">
                 <i class="fas fa-chart-line"></i>
@@ -437,11 +422,6 @@
 
     <!-- Footer Two Area Start -->
     <div class="footer__two">
-      <img
-        class="footer__two-shape"
-        src="assets/img/shape/footer-two-bg.png"
-        alt="image"
-      />
       <div class="container">
         <div class="row gy-4 justify-content-between">
           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
