--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
                     <i class="fas fa-map-marker-alt"></i>
                   </span>
                   <div class="contact-text">
-                    <h4>Επισκευτείτε μας</h4>
+                    <h4>Επισκεφτείτε μας</h4>
                     <p>Ανδρέα Παπανδρέου 47, 15232 Χαλάνδρι Αττική Ελλάδα</p>
                   </div>
                 </li>
@@ -212,7 +212,7 @@
                   </li>
                   <li>
                     <a href="ai.html"
-                      ><i class="far fa-chevron-double-right"></i>Τεχνική
+                      ><i class="far fa-chevron-double-right"></i>Τεχνητή
                       Νοημοσύνη</a
                     >
                   </li>
