--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                   </li>
                   <li>
                     <a href="ai.html"
-                      ><i class="far fa-chevron-double-right"></i>Τεχνική
+                      ><i class="far fa-chevron-double-right"></i>Τεχνητή
                       Νοημοσύνη</a
                     >
                   </li>
