--- a/ai.html
+++ b/ai.html
@@ -317,7 +317,7 @@
                   </li>
                   <li>
                     <a href="ai.html"
-                      ><i class="far fa-chevron-double-right"></i>Τεχνική
+                      ><i class="far fa-chevron-double-right"></i>Τεχνητή
                       Νοημοσύνη</a
                     >
                   </li>
