--- a/engagement.html
+++ b/engagement.html
@@ -15,7 +15,7 @@
     <meta name="author" content="ThemeOri" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Title of Site -->
-    <title>SoftBiz</title>
+    <title>Engagement-SoftBiz</title>
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Bootstrap CSS -->
@@ -49,6 +49,20 @@
   </head>
 
   <body>
+    <!-- Top Bar Start -->
+    <div class="top__bar">
+      <div class="container">
+        <div class="col-xl-5 col-md-5">
+          <div class="top__bar-right">
+            <a href="tel:(629)555-0129"
+              ><i class="fas fa-phone-alt"></i>+30 210.684.6329</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Top Bar End -->
+
     <!-- Header Area Start -->
     <div class="header__area header__sticky">
       <div class="container">
@@ -192,8 +206,8 @@
                   ><img src="assets/img/logo_SoftBiz.png" alt="image"
                 /></a>
                 <p>
-                  Μετατρέπουμε ιδέες σε λογισμικό, AI projects και εμπειρίες που
-                  εμπνέουν
+                  Μετατρέπουμε τις ιδέες σας σε εμπνευσμένες εμπειρίες,
+                  αξιοποιώντας τη δύναμη της τεχνολογίας
                 </p>
               </div>
             </div>
