--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta name="author" content="ThemeOri" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SoftBiz</title>
+    <title>Αρχική-SoftBiz</title>
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
@@ -226,25 +226,6 @@
             </div>
           </div>
         </div>
-
-        <div class="subscribe__one three">
-          <div
-            class="row justify-content-center text-center subscribe__one-content"
-          >
-            <div class="col-xl-7 col-lg-8">
-              <div class="subscribe__one-title">
-                <h4>Engagement τεχνογνωσίας</h4>
-                <p>
-                  Διάδραση μικρών, μεσαίων και πολύ μεγάλων ομάδων τόσο σε
-                  εταιρικό περιβάλλον όσο και σε εκδηλώσεις
-                </p>
-                <a href="engagement.html" class="btn-three"
-                  >Μάθε περισσότερα <i class="fas fa-angle-right"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
     <!-- About Area End -->
@@ -257,11 +238,13 @@
             <div class="blog__one-title"><h2>Υπηρεσίες</h2></div>
           </div>
         </div>
+
         <div class="row justify-content-center gy-4">
-          <div class="col-xl-6 col-lg-6">
+          <!-- 1 -->
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
             <div class="blog__one-single-blog">
               <div class="blog__one-single-blog-image">
-                <img src="assets/img/service/service1.png" alt="image" />
+                <img src="assets/img/service/service1.png" alt="AI & Data" />
               </div>
               <div class="blog__one-single-blog-content">
                 <h4>AI & Data</h4>
@@ -276,10 +259,11 @@
             </div>
           </div>
 
-          <div class="col-xl-6 col-lg-6">
+          <!-- 2 -->
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
             <div class="blog__one-single-blog">
               <div class="blog__one-single-blog-image">
-                <img src="assets/img/service/service2.png" alt="image" />
+                <img src="assets/img/service/service2.png" alt="Gaming" />
               </div>
               <div class="blog__one-single-blog-content">
                 <h4>Gaming</h4>
@@ -288,6 +272,25 @@
                   δημιουργεί αξέχαστες εμπειρίες.
                 </p>
                 <a href="games.html" class="btn-three"
+                  >Μάθε περισσότερα <i class="fas fa-angle-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- 3  -->
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+            <div class="blog__one-single-blog">
+              <div class="blog__one-single-blog-image">
+                <img src="assets/img/service/Engagement.png" alt="Engagement" />
+              </div>
+              <div class="blog__one-single-blog-content">
+                <h4>Engagement</h4>
+                <p>
+                  Διάδραση μικρών, μεσαίων και πολύ μεγάλων ομάδων τόσο σε
+                  εταιρικό περιβάλλον όσο και σε εκδηλώσεις.
+                </p>
+                <a href="engagement.html" class="btn-three"
                   >Μάθε περισσότερα <i class="fas fa-angle-right"></i
                 ></a>
               </div>
@@ -311,7 +314,7 @@
                 <h4>Συμβουλευτική Διοίκησης & Μάρκετινγκ</h4>
                 <p>
                   Στρατηγική καθοδήγηση που βοηθά τις επιχειρήσεις να
-                  αναπτυχθούν
+                  αναπτυχθούν.
                 </p>
               </div>
             </div>
@@ -326,7 +329,7 @@
                 <h4>Έρευνα αγοράς</h4>
                 <p>
                   Αξιοποιούμε δεδομένα και έρευνες αγοράς για να στηρίξουμε
-                  στρατηγικές αποφάσεις
+                  στρατηγικές αποφάσεις.
                 </p>
               </div>
             </div>
@@ -341,7 +344,7 @@
                 <h4>Ανάπτυξη Λογισμικού</h4>
                 <p>
                   Custom ανάπτυξη λογισμικού με έμφαση στη λειτουργικότητα και
-                  την ασφάλεια
+                  την ασφάλεια.
                 </p>
               </div>
             </div>
@@ -431,8 +434,8 @@
                   ><img src="assets/img/logo_SoftBiz.png" alt="image"
                 /></a>
                 <p>
-                  Μετατρέπουμε ιδέες σε λογισμικό, AI projects και εμπειρίες που
-                  εμπνέουν
+                  Μετατρέπουμε τις ιδέες σας σε εμπνευσμένες εμπειρίες,
+                  αξιοποιώντας τη δύναμη της τεχνολογίας
                 </p>
               </div>
             </div>
