--- a/terms-policies.html
+++ b/terms-policies.html
@@ -483,7 +483,7 @@
 
 
 		
-    <!-- Footer Two Area Start -->
+  <!-- Footer Two Area Start -->
     <div class="footer__two">
       <div class="container">
         <div class="row gy-4 justify-content-between">
@@ -494,12 +494,12 @@
                   ><img src="assets/img/logo_SoftBiz.png" alt="image"
                 /></a>
                 <p>
-                  Μετατρέπουμε ιδέες σε λογισμικό, AI projects και εμπειρίες που
-                  εμπνέουν
+                  Μετατρέπουμε τις ιδέες σας σε εμπνευσμένες εμπειρίες, αξιοποιώντας τη δύναμη της τεχνολογίας
                 </p>
               </div>
             </div>
           </div>
+
           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
             <div class="footer__two-widget ml-85">
               <h4>Σύνδεσμοι</h4>
@@ -530,6 +530,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
             <div class="footer__two-widget">
               <h4>Επικοινωνία</h4>
@@ -557,6 +558,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
             <div class="footer__two-widget">
               <h4>Follow Us</h4>
@@ -579,6 +581,7 @@
           </div>
         </div>
       </div>
+
       <div class="copyright__one">
         <div class="container">
           <div
