--- a/contact.html
+++ b/contact.html
@@ -194,8 +194,8 @@
                   ><img src="assets/img/logo_SoftBiz.png" alt="image"
                 /></a>
                 <p>
-                  Μετατρέπουμε ιδέες σε λογισμικό, AI projects και εμπειρίες που
-                  εμπνέουν
+                  Μετατρέπουμε τις ιδέες σας σε εμπνευσμένες εμπειρίες,
+                  αξιοποιώντας τη δύναμη της τεχνολογίας
                 </p>
               </div>
             </div>
