--- a/games.html
+++ b/games.html
@@ -15,7 +15,7 @@
     <meta name="author" content="ThemeOri" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Title of Site -->
-    <title>SoftBiz</title>
+    <title>Παιχνίδια-SoftBiz</title>
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Bootstrap CSS -->
@@ -257,8 +257,8 @@
                   ><img src="assets/img/logo_SoftBiz.png" alt="image"
                 /></a>
                 <p>
-                  Μετατρέπουμε ιδέες σε λογισμικό, AI projects και εμπειρίες που
-                  εμπνέουν
+                  Μετατρέπουμε τις ιδέες σας σε εμπνευσμένες εμπειρίες,
+                  αξιοποιώντας τη δύναμη της τεχνολογίας
                 </p>
               </div>
             </div>
