--- a/ai.html
+++ b/ai.html
@@ -83,6 +83,7 @@
                 <li><a href="index.html">Αρχική</a></li>
                 <li><a href="ai.html">Τεχνητή Νοημοσύνη</a></li>
                 <li><a href="games.html">Παιχνίδια</a></li>
+                <li><a href="engagement.html">Engagement</a></li>
                 <li><a href="contact.html">Επικοινωνία</a></li>
               </ul>
             </div>
@@ -327,6 +328,11 @@
                     >
                   </li>
                   <li>
+                    <a href="engagement.html"
+                      ><i class="far fa-chevron-double-right"></i>Engagement</a
+                    >
+                  </li>
+                  <li>
                     <a href="contact.html"
                       ><i class="far fa-chevron-double-right"></i>Επικοινωνία</a
                     >
@@ -391,7 +397,7 @@
           >
             <div class="col-xl-5 col-lg-6">
               <div class="copyright__one-left">
-                <p>© ThemeOri 2024 | All Rights Reserved</p>
+                <p>All rights reserved © <a href="#">SoftBiz.eu</a> 2025</p>
               </div>
             </div>
           </div>
