--- a/terms-policies.html
+++ b/terms-policies.html
@@ -54,10 +54,11 @@
           </div>
           <div class="header__area-menubar-center">
             <div class="header__area-menubar-center-menu menu-responsive">
-              <ul id="mobilemenu">
+             <ul id="mobilemenu">
                 <li><a href="index.html">Αρχική</a></li>
                 <li><a href="ai.html">Τεχνητή Νοημοσύνη</a></li>
                 <li><a href="games.html">Παιχνίδια</a></li>
+                <li><a href="engagement.html">Engagement</a></li>
                 <li><a href="contact.html">Επικοινωνία</a></li>
               </ul>
             </div>
@@ -521,6 +522,12 @@
                       ><i class="far fa-chevron-double-right"></i>Παιχνίδια</a
                     >
                   </li>
+				    <li>
+                    <a href="engagement.html"
+                      ><i class="far fa-chevron-double-right"></i
+                      >Engagement</a
+                    >
+                  </li>
                   <li>
                     <a href="contact.html"
                       ><i class="far fa-chevron-double-right"></i>Επικοινωνία</a
@@ -589,7 +596,7 @@
           >
             <div class="col-xl-5 col-lg-6">
               <div class="copyright__one-left">
-                <p>© ThemeOri 2024 | All Rights Reserved</p>
+                <p>All rights reserved  ©  <a href="#">SoftBiz.eu</a>  2025</p>
               </div>
             </div>
           </div>
